examples/test/testpolicy3220.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3220
  namespace: namespace115
spec:
  podSelector:
    matchLabels:
      key42: value3
      key15: value9
      key17: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value5
          key25: value29
      podSelector:
        matchLabels:
          key6: value5
